--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "bootstrap": "^4.6.2",
     "firebase": "^11.3.1",
     "gh-pages": "^6.3.0",
+    "jquery": "^3.7.1",
+    "jquery-zoom": "^1.7.21",
+    "nouislider": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
