--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://kaita-john.github.io/CandleApp_FrontEnd_React",
+  "homepage": "https://kaita-john.github.io/ciomaingi/",
   "name": "candleapp",
   "private": true,
   "version": "0.0.0",
