Fix build and deploy scripts

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kaita-john.github.io/ciomaingi/",
+  "homepage": "https://kaita-john.github.io/ciomaingi",
   "name": "candleapp",
   "private": true,
   "version": "0.0.0",
